# Suffragists

./: README.md  main.py  pyproject.toml  requirements.txt
results/: README.md  known_errors.md
results/common_cause_1/: meetings.csv  ocr.csv  ocr.txt  response.json  response.txt
results/common_cause_10/: meetings.csv  response.json
results/common_cause_100/: meetings.csv  response.json
results/common_cause_101/: meetings.csv  response.json
results/common_cause_102/: meetings.csv  response.json
results/common_cause_103/: meetings.csv  response.json
results/common_cause_104/: meetings.csv  response.json
results/common_cause_105/: meetings.csv  response.json
results/common_cause_106/: meetings.csv  response.json
results/common_cause_107/: meetings.csv  response.json
results/common_cause_108/: meetings.csv  response.json
results/common_cause_109/: meetings.csv  response.json
results/common_cause_11/: meetings.csv  ocr.csv  ocr.txt  response.json
results/common_cause_110/: meetings.csv  response.json
results/common_cause_111/: meetings.csv  response.json
results/common_cause_112/: meetings.csv  response.json
results/common_cause_113/: meetings.csv  response.json
results/common_cause_114/: meetings.csv  response.json
results/common_cause_115/: meetings.csv  response.json
results/common_cause_116/: meetings.csv  response.json
results/common_cause_117/: meetings.csv  response.json
results/common_cause_118/: meetings.csv  (+1 more)
src/: detect_and_ocr_tables.py  ocr.py  ocr_and_cluster.py  preprocess.py  prompt_gemini.py  utils.py
(+610 files in other folders)
